# 2nd-Semester-Projects

./: .gitignore  LICENSE  README.md
OOP/Lab1/: main.cpp
OOP/Lab2/: CMakeLists.txt  main.cpp
OOP/Lab2/Source/: iterator.cpp  iterator.hpp  set.cpp  set.h  set.hpp  set_iterator.cpp
OOP/Lab3_Calculator/: Lab3_Calculator.pro  calculator.cpp  calculator.h  commandfactory.cpp  commandfactory.h  commands.cpp  commands.h  dijkstra.cpp  dijkstra.h  exceptions.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
OOP/Lab4_SurfaceViewer/: Lab4_SurfaceViewer.pro  consts.h  edge.cpp  edge.h  exceptions.h  facade.cpp  facade.h  figure.cpp  figure.h  filereader.cpp  filereader.h  gesturegraphicsview.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  normalizationparameters.cpp  normalizationparameters.h  point3d.cpp  point3d.h  qtscenedrawer.cpp  scene.cpp  scene.h  sceneobject.cpp  sceneobject.h  surfacepainter.cpp  transformmatrix.cpp  transformmatrix.h  vertex.cpp  vertex.h
OP/Base Converter (lab1)/: CMakeLists.txt  appcontext.h  constants.h  converter.cpp  converter.h  entrypoint.cpp  entrypoint.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  utilities.cpp  utilities.h
OP/Lab2_CSV_Editor/: Lab2_CSV_Editor.pro  appcontext.h  consts.h  csv.cpp  csv.h  entrypoint.cpp  entrypoint.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotwidget.cpp  plotwidget.h  rownode.cpp  rownode.h
OP/Lab4_SurfaceViewer/: Lab4_SurfaceViewer.pro  appcontext.h  consts.h  csv.cpp  csv.h  entrypoint.cpp  entrypoint.h  gesturegraphicsview.cpp  gesturegraphicsview.h  mainwindow.ui  surfacepainter.h
(+16 files in other folders)
